# sev-step-rust-userland

./: .gitignore  Cargo.toml  README.md  build.rs  vm-config.toml  wrapper.h
sev_step_lib/: Cargo.toml  README.md  build.rs
sev_step_lib/examples/: targeted-single-stepping.rs
sev_step_lib/examples/complex-composition/: detect_mem_arg_handler.rs  main.rs
sev_step_lib/examples/targeted-single-stepping/: main.rs
sev_step_lib/src/: api.rs  config.rs  cpufreq.rs  event_handlers.rs  ioctls.rs  lib.rs  raw_spinlock.s  single_stepper.rs  types.rs  vmserver_client.rs
sev_step_lib/src/event_handlers/: closure_adapter_handler.rs  state_machine_handlers.rs
sev_step_lib/src/vmserver_client/: req_resp_ds.rs
src/: api.rs  config.rs  ioctls.rs  lib.rs  main.rs  raw_spinlock.rs  raw_spinlock.s  single_stepper.rs  types.rs  vm_setup_helpers.rs  vmserver_client.rs
src/vmserver_client/: req_resp_ds.rs
victims/: README.md  build_all.sh  parse_pagemap.c  parse_pagemap.h
victims/dummy_victim/: a.out  build.sh  main.c
victims/simple_pf_victim/: a.out  build.sh  main.c  victim_function.asm
vm_server/: Cargo.toml  README.md
vm_server/src/: assembly_target.rs  external_target.rs  handlers.rs  lib.rs  req_resp.rs  virt_to_phys.rs
vm_server/src/assembly_target/: page_ping_ponger.rs
