[package]
name = "rust_userland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.65.1"
anyhow = "1.0.71"


[dependencies]
anyhow = "1.0.71"
nix = "0.26.2"
log = "0.4.17"
ctrlc = "3.2.5"
reqwest = { version = "0.11.18", features = ["blocking","json"]}
serde = { version = "1.0", features = ["derive"] }