[package]
name = "vm_server_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
iced-x86 = { version = "1.20.0", features = ["code_asm", "serde"] }
nix = "0.26.2"
axum = "0.6.20"
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
pagemap = "0.1.0"
